Make network indicator
Signed-off-by: Aleksandr Vakhtin <alexandr@tari.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -432,4 +432,15 @@
     <string name="enter_backup_password_wrong_password_error">Seems that the password is wrong.</string>
     <string name="search_gifs_dialog_hint">Search GIPHY</string>
 
+    <!-- Network status indicator-->
+    <string name="connection_status_ok">Everything ok. Move along, nothing to see here</string>
+    <string name="connection_status_warning_sync_in_progress">Syncing with base node</string>
+    <string name="connection_status_warning_sync_failed">Unable to sync with base node</string>
+    <string name="connection_status_error_no_network_connection">Unable to connect with internet</string>
+    <string name="connection_status_error_unknown_network_connection_status">Unknown internet connection status</string>
+    <string name="connection_status_error_disconnected_from_tor">Failed to connect with Tor</string>
+    <string name="connection_status_error_connecting_with_tor">Connecting with Tor</string>
+    <string name="connection_status_error_unknown_tor_connection_status">Unknown connection status with Tor</string>
+    <string name="connection_status_error_disconnected_from_base_node">Disconnected from the base node</string>
+
 </resources>
